feat:initial construction of the front end layout

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,8 +1,11 @@
 #root {
   max-width: 1280px;
+  height: 100%;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -11,17 +14,32 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+main {
+  width: 800px;
+  min-height: 400px;
+  background-color: #1616;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.75rem;
 }
 
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
